# pleb-client

./: Cargo.toml  DEVELOPMENT_NOTES.md  README.md  build.rs
packaging/: build-deb.sh  build-flatpak.sh  build-rpm.sh
packaging/deb/: control
packaging/flatpak/: cargo-sources.json  one.pleb.PlebClient.metainfo.xml
packaging/rpm/: pleb-client.spec
qml/: Main.qml
qml/components/: ArticleCard.qml  ArticleComposer.qml  ComposeDialog.qml  EmbeddedNote.qml  EmbeddedProfile.qml  FountainPlayer.qml  GifPicker.qml  ImageViewer.qml  LinkPreview.qml  NoteCard.qml  ProfileAvatar.qml  Sidebar.qml  VideoPlayer.qml  YouTubePlayer.qml
qml/screens/: ArticleScreen.qml  DmScreen.qml  FeedScreen.qml  LoginScreen.qml  NotificationsScreen.qml  ProfileScreen.qml  ReadsScreen.qml  RelaysScreen.qml  SearchScreen.qml  SettingsScreen.qml  ThreadScreen.qml
resources/: resources.qrc
src/: main.rs
src/bridge/: app_bridge.rs  dm_bridge.rs  feed_bridge.rs  mod.rs  notification_bridge.rs  profile_bridge.rs  search_bridge.rs
src/core/: config.rs  credentials.rs  error.rs  mod.rs
src/nostr/: blossom.rs  database.rs  dm.rs  feed.rs  mod.rs  nwc.rs  profile.rs  relay.rs  tenor.rs  zap.rs
src/signer/: client.rs  mod.rs  service.rs
